--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0025.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0025.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0025.png">
-      <!--<div class="ocr_carea" title="bbox 108 154 2010 1012">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 659 161 1933 196">
         <span id="w_0" class="ocr_word" title="bbox 659 161 1024 196">
           <span class="alternatives">
@@ -31,8 +29,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 125 277 1935 332">
         <span id="w_3" class="ocr_word" title="bbox 125 281 178 323">
           <span class="alternatives">
@@ -60,8 +56,8 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 787 277 1103 331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">proleg’omeuis</ins>
-            <del title="nlp 0.90">proleg’omeuis</del>
+            <ins class="alt" title="nlp 0.10">’omeuis</ins>
+            <del title="nlp 0.90">’omeuis</del>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1142 277 1441 332">
@@ -102,20 +98,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 265 350 302 389">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
         <span id="w_15" class="ocr_word" title="bbox 312 372 365 376">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 370 348 438 389">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">IQ""</ins>
+            <ins title="nlp 2.00">1r—19r</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 468 347 817 389">
@@ -174,9 +159,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 189 418 336 471" xml:lang="grc">
+        <span id="w_26" class="ocr_word" title="bbox 189 418 336 471" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1ω,27</ins>
+            <ins title="nlp 2.00">100,27</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 370 416 538 469">
@@ -203,27 +188,27 @@
             <del title="nlp 0.90">verba</del>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 985 429 1159 469" xml:lang="grc">
+        <span id="w_31" class="ocr_word" title="bbox 985 429 1159 469" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περιέχει</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 1189 430 1259 469" xml:lang="grc">
+        <span id="w_32" class="ocr_word" title="bbox 1189 430 1259 469" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1283 431 1326 454" xml:lang="grc">
+        <span id="w_33" class="ocr_word" title="bbox 1283 431 1326 454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1350 415 1501 468" xml:lang="grc">
+        <span id="w_34" class="ocr_word" title="bbox 1350 415 1501 468" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικὸν</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 1524 415 1730 469" xml:lang="grc">
+        <span id="w_35" class="ocr_word" title="bbox 1524 415 1730 469" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄνθρωπον</ins>
           </span>
@@ -328,17 +313,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 646 552 797 606">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">100,28</ins>
-          </span>
-        </span>
-        <span id="w_53" class="ocr_word" title="bbox 805 577 853 579">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_54" class="ocr_word" title="bbox 861 552 1032 604">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">104,12)</ins>
+            <ins class="alt" title="nlp 2.00">100,28—104,12)</ins>
           </span>
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1072 551 1353 592">
@@ -434,7 +409,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1676 620 1716 660">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">2’"</ins>
+            <ins title="nlp 2.00">2r</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 1737 623 1939 660">
@@ -451,41 +426,37 @@
             <del title="nlp 0.90">est</del>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 216 690 401 731" xml:lang="grc">
+        <span id="w_73" class="ocr_word" title="bbox 216 690 401 731" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Αμόνιος</ins>
-            <del title="nlp 0.90">Αἱμόνιος</del>
-            <del title="nlp 0.89">Ἁρμόνιος</del>
-            <del title="nlp 0.88">Αὐσόνιος</del>
+            <ins title="nlp 2.00">Αμόνιος</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 425 691 483 743">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(V)</ins>
-            <del title="nlp 0.90">(V</del>
+            <ins title="nlp 2.00">(?)</ins>
           </span>
         </span>
-        <span id="w_75" class="ocr_word" title="bbox 515 706 568 734" xml:lang="grc">
+        <span id="w_75" class="ocr_word" title="bbox 515 706 568 734" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 600 706 711 730" xml:lang="grc">
+        <span id="w_76" class="ocr_word" title="bbox 600 706 711 730" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πέντε</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 742 705 872 744" xml:lang="grc">
+        <span id="w_77" class="ocr_word" title="bbox 742 705 872 744" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνὰς</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 904 704 969 728" xml:lang="grc">
+        <span id="w_78" class="ocr_word" title="bbox 904 704 969 728" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_79" class="ocr_word" title="bbox 995 688 1232 743" xml:lang="grc">
+        <span id="w_79" class="ocr_word" title="bbox 995 688 1232 743" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Πορφυρίου,</ins>
           </span>
@@ -582,10 +553,9 @@
             <del title="nlp 0.90">coutulit</del>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 1585 756 1634 796" xml:lang="grc">
+        <span id="w_95" class="ocr_word" title="bbox 1585 756 1634 796" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">.</ins>
-            <del title="nlp 0.90">Η.</del>
+            <ins title="nlp 2.00">Η.</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1669 756 1800 797">
@@ -595,8 +565,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 238 823 1994 879">
         <span id="w_97" class="ocr_word" title="bbox 238 828 428 870">
           <span class="alternatives">
@@ -640,9 +608,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 1356 824 1437 866" xml:lang="grc">
+        <span id="w_104" class="ocr_word" title="bbox 1356 824 1437 866" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">399ὴ33</ins>
+            <ins title="nlp 2.00">399–433</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1606 823 1797 866">
@@ -744,10 +712,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 114 1410 2026 3346">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 226 1417 1838 1457">
         <span id="w_121" class="ocr_word" title="bbox 226 1420 261 1456">
           <span class="alternatives">
@@ -818,8 +782,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 241 1656 2010 1715">
         <span id="w_132" class="ocr_word" title="bbox 241 1661 432 1703">
           <span class="alternatives">
@@ -834,7 +796,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 564 1660 679 1715">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">[vide</ins>
+            <ins title="nlp 2.00">[vide</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 717 1660 848 1714">
@@ -861,9 +823,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_139" class="ocr_word" title="bbox 1311 1659 1369 1714" xml:lang="grc">
+        <span id="w_139" class="ocr_word" title="bbox 1311 1659 1369 1714" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Χ]</ins>
+            <ins title="nlp 2.00">Χ]</ins>
           </span>
         </span>
         <span id="w_140" class="ocr_word" title="bbox 1408 1665 1451 1701">
@@ -886,22 +848,16 @@
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1820 1658 1942 1698">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Gate-</ins>
+            <ins title="nlp 2.00">Gategorias</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1975 1656 2010 1696" xml:lang="grc">
+        <span id="w_144" class="ocr_word" title="bbox 1975 1656 2010 1696" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Α</ins>
+            <ins title="nlp 2.00">Α</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 129 1727 1942 1784">
-        <span id="w_145" class="ocr_word" title="bbox 129 1731 267 1784">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gorias</ins>
-            <del title="nlp 0.90">gorias</del>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 304 1729 528 1771">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">uberrimis</ins>
@@ -958,20 +914,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_155" class="ocr_word" title="bbox 173 1800 216 1842">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">2"</ins>
-          </span>
-        </span>
-        <span id="w_156" class="ocr_word" title="bbox 226 1824 277 1829">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
         <span id="w_157" class="ocr_word" title="bbox 292 1798 369 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IS’’,</ins>
-            <del title="nlp 0.90">IS’’,</del>
+            <ins title="nlp 2.00">2v—18r,</ins>
           </span>
         </span>
         <span id="w_158" class="ocr_word" title="bbox 403 1798 568 1840">
@@ -998,19 +943,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 978 1798 1047 1839">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">2r</ins>
-          </span>
-        </span>
         <span id="w_163" class="ocr_word" title="bbox 1064 1822 1117 1825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 1128 1798 1200 1838">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">54’"</ins>
+            <ins title="nlp 2.00">21v—54r</ins>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1221 1797 1490 1839">
@@ -1063,9 +998,9 @@
             <del title="nlp 0.90">saeculo</del>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 1058 1866 1096 1907" xml:lang="grc">
+        <span id="w_173" class="ocr_word" title="bbox 1058 1866 1096 1907" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Χ</ins>
+            <ins title="nlp 2.00">Χ</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1126 1867 1196 1908">
@@ -1098,19 +1033,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 1750 1866 1792 1906">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">2^</ins>
-          </span>
-        </span>
         <span id="w_180" class="ocr_word" title="bbox 1807 1890 1857 1894">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_181" class="ocr_word" title="bbox 1863 1865 1932 1906">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">29"^</ins>
+            <ins title="nlp 2.00">2v—29r</ins>
           </span>
         </span>
       </span>
@@ -1165,24 +1090,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 2002 1945 2060">
-        <span id="w_190" class="ocr_word" title="bbox 130 2008 185 2060" xml:lang="grc">
+        <span id="w_190" class="ocr_word" title="bbox 130 2008 185 2060" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">Φ.</ins>
+            <ins title="nlp 2.00">(p.</ins>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 212 2008 281 2047">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1^1</ins>
-          </span>
-        </span>
-        <span id="w_192" class="ocr_word" title="bbox 288 2030 338 2034">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_193" class="ocr_word" title="bbox 344 2005 486 2057">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">4*^19),</ins>
+            <ins title="nlp 2.00">1a1—4a19),</ins>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 524 2004 762 2058">
@@ -1227,19 +1142,9 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_201" class="ocr_word" title="bbox 1728 2002 1799 2043">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">29^</ins>
-          </span>
-        </span>
         <span id="w_202" class="ocr_word" title="bbox 1814 2027 1866 2029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 1875 2003 1945 2042">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">44’"</ins>
+            <ins title="nlp 2.00">29v—44r</ins>
           </span>
         </span>
       </span>
@@ -1294,17 +1199,12 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1632 2073 1677 2112">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">4’’</ins>
-          </span>
-        </span>
-        <span id="w_213" class="ocr_word" title="bbox 1689 2071 1798 2114">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">20—</ins>
+            <ins title="nlp 2.00">4b20—</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 1807 2071 1944 2113">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">11^38</ins>
+            <ins title="nlp 2.00">11a38</ins>
           </span>
         </span>
       </span>
@@ -1495,7 +1395,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1621 2279 1694 2319">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">44^</ins>
+            <ins title="nlp 2.00">44v</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 1734 2279 1944 2331">
@@ -1760,10 +1660,9 @@
             <del title="nlp 0.90">quae</del>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 614 2624 664 2665" xml:lang="grc">
+        <span id="w_288" class="ocr_word" title="bbox 614 2624 664 2665" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">.</ins>
-            <del title="nlp 0.90">Α.</del>
+            <ins title="nlp 2.00">Α.</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 696 2623 795 2664">
@@ -2091,7 +1990,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 694 3039 861 3087">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">i)artem</ins>
+            <ins title="nlp 2.00">partem</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 911 3048 964 3075">
@@ -2281,8 +2180,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
