--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0039.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0039.html
@@ -1,50 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0039.png">
-      <!--<div class="ocr_carea" title="bbox 122 1130 1964 1792">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 718 1148 1352 1242">
         <span id="w_0" class="ocr_word" title="bbox 718 1150 800 1242">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 870 1150 942 1242">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">L</ins>
-            <del title="nlp 0.90">L</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 1004 1150 1048 1240">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 1112 1148 1210 1242">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 1270 1150 1352 1242">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
+            <ins title="nlp 2.00">ELIAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 336 1356 1748 1436">
         <span id="w_5" class="ocr_word" title="bbox 336 1358 452 1434">
           <span class="alternatives">
@@ -85,96 +56,27 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 542 1722 1544 1788">
         <span id="w_11" class="ocr_word" title="bbox 542 1722 594 1788">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C</ins>
-            <del title="nlp 0.90">C</del>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 632 1724 690 1788">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">O</ins>
-            <del title="nlp 0.90">O</del>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 728 1724 798 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 836 1726 906 1788">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_15" class="ocr_word" title="bbox 944 1724 998 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 1036 1724 1094 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1132 1724 1184 1788">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 1220 1726 1280 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_19" class="ocr_word" title="bbox 1318 1724 1380 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">R</ins>
-            <del title="nlp 0.90">R</del>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 1418 1722 1448 1784">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 1486 1726 1544 1786">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
+            <ins title="nlp 2.00">COMMENTARIA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 194 3196 1696 3262">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 210 3207 1679 3258">
         <span id="w_22" class="ocr_word" title="bbox 210 3221 377 3250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tJommeiit.</ins>
-            <del title="nlp 0.90">tJommeiit.</del>
+            <ins title="nlp 2.00">Comment.</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 397 3223 488 3250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Aii&gt;t.</ins>
+            <ins title="nlp 2.00">Arist. </ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 509 3223 611 3251">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XVIII</ins>
-            <del title="nlp 0.90">XVIII</del>
+            <ins title="nlp 2.00">XVIII</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 631 3224 654 3251">
@@ -184,54 +86,45 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 692 3223 776 3250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Eliac</ins>
-            <del title="nlp 0.90">Eliac</del>
+            <ins title="nlp 2.00">Eliac</ins>
           </span>
         </span>
         <span id="w_27" class="ocr_word" title="bbox 798 3223 828 3249">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 849 3222 960 3258">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Pori&gt;li.</ins>
+            <ins title="nlp 2.00">Porph.</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 980 3222 1057 3256">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Isag.</ins>
-            <del title="nlp 0.90">Isag.</del>
+            <ins title="nlp 2.00">Isag.</ins>
           </span>
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1080 3222 1109 3248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">et</ins>
-            <del title="nlp 0.90">et</del>
+            <ins title="nlp 2.00">et</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1130 3221 1222 3248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Arist.</ins>
-            <del title="nlp 0.90">Arist.</del>
+            <ins title="nlp 2.00">Arist.</ins>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1244 3220 1307 3248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cat.</ins>
-            <del title="nlp 0.90">Cat.</del>
+            <ins title="nlp 2.00">Cat.</ins>
           </span>
         </span>
         <span id="w_33" class="ocr_word" title="bbox 1648 3207 1679 3250">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C</ins>
-            <del title="nlp 0.90">C</del>
+            <ins title="nlp 2.00">C</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
