--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0040.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0040.html
@@ -1,50 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0040.png">
-      <!--<div class="ocr_carea" title="bbox 972 1164 1672 1596">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1153 1173 1369 1215">
         <span id="w_0" class="ocr_word" title="bbox 1153 1174 1180 1215">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">S</ins>
-            <del title="nlp 0.90">S</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 1202 1174 1216 1214">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 1236 1174 1267 1213">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">G</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 1286 1173 1315 1213">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">L</ins>
-            <del title="nlp 0.90">L</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 1333 1173 1369 1213">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
+            <ins title="nlp 2.00">SIGLA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 988 1345 1447 1381">
         <span id="w_5" class="ocr_word" title="bbox 988 1347 1014 1381">
           <span class="alternatives">
@@ -54,13 +25,12 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1040 1362 1084 1374">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1111 1346 1353 1380">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Coislinianiis</ins>
-            <del title="nlp 0.90">Coislinianiis</del>
+            <ins title="nlp 2.00">Coislinianus</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1380 1345 1447 1379">
@@ -69,29 +39,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 988 1415 1408 1450">
-        <span id="w_9" class="ocr_word" title="bbox 988 1417 1013 1450">
+        <span id="w_10" class="ocr_word" title="bbox 1040 1431 1083 1444" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1040 1431 1083 1444" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ι</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1109 1417 1218 1450">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Paris!</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1226 1427 1290 1449">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nus</ins>
-            <del title="nlp 0.90">nus</del>
+            <ins title="nlp 2.00">P= Parisinus</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1320 1415 1408 1448">
@@ -100,8 +51,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 991 1485 1655 1530">
         <span id="w_14" class="ocr_word" title="bbox 991 1487 1019 1519">
           <span class="alternatives">
@@ -111,13 +60,12 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1038 1502 1083 1514">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 1109 1486 1396 1520">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Yindobonensis</ins>
-            <del title="nlp 0.90">Yindobonensis</del>
+            <ins title="nlp 2.00">Vindobonensis</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1424 1486 1508 1529">
@@ -138,18 +86,15 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 997 1556 1392 1591">
         <span id="w_20" class="ocr_word" title="bbox 997 1568 1015 1590">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">c</ins>
-            <del title="nlp 0.90">c</del>
+            <ins title="nlp 2.00">c</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1039 1572 1084 1584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">=</ins>
+            <ins title="nlp 2.00">=</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1109 1556 1261 1591">
@@ -165,8 +110,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
