--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0267.html
@@ -1949,15 +1949,12 @@
         </span>
         <span id="w_374" class="ocr_word" title="bbox 219 2462 315 2496">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">9ai4:</ins>
+            <ins title="nlp 2.00">9a14</ins>
           </span>
         </span>
         <span id="w_375" class="ocr_word" title="bbox 357 2449 545 2506" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">‘Eτερον</ins>
-            <del title="nlp 0.90">θἄτερον</del>
-            <del title="nlp 0.89">θάτερον</del>
-            <del title="nlp 0.88">κότερον</del>
+            <ins title="nlp 2.00">Ἓτερον</ins>
           </span>
         </span>
         <span id="w_376" class="ocr_word" title="bbox 590 2453 637 2492" lang="grc">
@@ -1995,23 +1992,18 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 1728 2456 1826 2508" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δρο-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 903 2522 1081 2574">
         <span id="w_384" class="ocr_word" title="bbox 903 2537 929 2574" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μικούς.</ins>
+            <ins title="nlp 2.00">δρομιχούς.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 264 2622 1829 2680">
         <span id="w_385" class="ocr_word" title="bbox 264 2622 338 2669">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">"Ec</ins>
+            <ins title="nlp 2.00">Ἓξ</ins>
           </span>
         </span>
         <span id="w_386" class="ocr_word" title="bbox 369 2641 450 2665" lang="grc">
@@ -2130,10 +2122,7 @@
       <span class="ocr_line" title="bbox 166 2764 1829 2819">
         <span id="w_408" class="ocr_word" title="bbox 166 2776 222 2800" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ς6τι</ins>
-            <del title="nlp 0.90">Δάτι</del>
-            <del title="nlp 0.89">Θέτι</del>
-            <del title="nlp 0.88">Μῆτι</del>
+            <ins title="nlp 2.00">ὃτι</ins>
           </span>
         </span>
         <span id="w_409" class="ocr_word" title="bbox 251 2778 283 2802" lang="grc">
@@ -2193,23 +2182,14 @@
         </span>
         <span id="w_420" class="ocr_word" title="bbox 1745 2777 1829 2803" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">συν-</ins>
+            <ins title="nlp 2.00">συνἀμελετισίαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 94 2896 1805 2947">
         <span id="w_421" class="ocr_word" title="bbox 94 2896 114 2928">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">4</ins>
-            <del title="nlp 0.90">συνῆ</del>
-            <del title="nlp 0.89">συνῇ</del>
-            <del title="nlp 0.88">συνῶ</del>
-          </span>
-        </span>
-        <span id="w_422" class="ocr_word" title="bbox 140 2904 341 2933">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aiAsAsTtatav</ins>
-            <del title="nlp 0.90">aiAsAsTtatav</del>
+            <ins title="nlp 2.00">4</ins>
           </span>
         </span>
         <span id="w_423" class="ocr_word" title="bbox 369 2901 392 2933">
@@ -2263,33 +2243,19 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1537 2899 1735 2946" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">τελειωτέρα</ins>
-            <del title="nlp 0.90">τελειοτέρα</del>
-            <del title="nlp 0.89">τελεωτέρα</del>
-            <del title="nlp 0.88">τελειωτικὰ</del>
+            <ins title="nlp 2.00">τελειωτέρα</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1762 2900 1805 2932" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Κ1</ins>
+            <ins title="nlp 2.00">Κ1</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 94 2958 1898 3007">
         <span id="w_434" class="ocr_word" title="bbox 94 2964 233 3000">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">£f,e[</ins>
-          </span>
-        </span>
-        <span id="w_435" class="ocr_word" title="bbox 236 2978 276 2981">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_436" class="ocr_word" title="bbox 281 2958 459 2996">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oiaSsaeio;</ins>
-            <del title="nlp 0.90">oiaSsaeio;</del>
+            <ins title="nlp 2.00">ὅιαφέρει—διαθέσεως</ins>
           </span>
         </span>
         <span id="w_437" class="ocr_word" title="bbox 485 2961 519 3002">
@@ -2316,7 +2282,7 @@
         </span>
         <span id="w_441" class="ocr_word" title="bbox 750 2959 781 2992" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Κ</ins>
+            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 924 2962 1000 3006" lang="grc">
@@ -2358,16 +2324,11 @@
         </span>
         <span id="w_449" class="ocr_word" title="bbox 1797 2970 1898 3003" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">κατη-</ins>
+            <ins title="nlp 2.00">χατηγορουμένης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 94 3016 1898 3063">
-        <span id="w_450" class="ocr_word" title="bbox 94 3016 291 3061">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">Yopou[;.^vTj;</ins>
-          </span>
-        </span>
         <span id="w_451" class="ocr_word" title="bbox 316 3018 360 3050">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">H:</ins>
@@ -2376,10 +2337,7 @@
         </span>
         <span id="w_452" class="ocr_word" title="bbox 389 3017 686 3063" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">κατηθοργουμἐνη</ins>
-            <del title="nlp 0.90">κατηγορουμένη</del>
-            <del title="nlp 0.89">κατηγορουμένην</del>
-            <del title="nlp 0.88">κατηγορουμένης</del>
+            <ins title="nlp 2.00">χχτηθοργουμένη</ins>
           </span>
         </span>
         <span id="w_453" class="ocr_word" title="bbox 713 3018 792 3059">
@@ -2396,15 +2354,12 @@
         </span>
         <span id="w_455" class="ocr_word" title="bbox 1024 3020 1062 3052">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">]G</ins>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_456" class="ocr_word" title="bbox 1090 3018 1287 3052" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">καθολικοτ.</ins>
-            <del title="nlp 0.90">καθολικοὶ.</del>
-            <del title="nlp 0.89">καθολικοί.</del>
-            <del title="nlp 0.88">καθολικοὺς.</del>
+            <ins title="nlp 2.00">χαθολιχοτ.</ins>
           </span>
         </span>
         <span id="w_457" class="ocr_word" title="bbox 1314 3020 1339 3052">
@@ -2425,15 +2380,14 @@
         </span>
         <span id="w_460" class="ocr_word" title="bbox 1757 3017 1898 3060">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">scrips!:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 95 3067 1854 3123">
         <span id="w_461" class="ocr_word" title="bbox 95 3067 197 3115">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Xeywv</ins>
-            <del title="nlp 0.90">Xeywv</del>
+            <ins title="nlp 2.00">λέγων</ins>
           </span>
         </span>
         <span id="w_462" class="ocr_word" title="bbox 226 3075 300 3108">
@@ -2480,12 +2434,12 @@
         </span>
         <span id="w_470" class="ocr_word" title="bbox 1063 3078 1106 3110">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">P-</ins>
+            <ins title="nlp 2.00">P2</ins>
           </span>
         </span>
         <span id="w_471" class="ocr_word" title="bbox 1256 3078 1298 3111">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">23</ins>
+            <ins title="nlp 2.00">23</ins>
           </span>
         </span>
         <span id="w_472" class="ocr_word" title="bbox 1325 3077 1359 3110" lang="grc">
@@ -2501,7 +2455,7 @@
         </span>
         <span id="w_474" class="ocr_word" title="bbox 1478 3077 1510 3109" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">Κ</ins>
+            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
         <span id="w_475" class="ocr_word" title="bbox 1653 3075 1696 3109">
@@ -2598,20 +2552,17 @@
       <span class="ocr_line" title="bbox 97 3184 1436 3239">
         <span id="w_491" class="ocr_word" title="bbox 97 3184 170 3220">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">aU""</ins>
+            <ins title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
         <span id="w_492" class="ocr_word" title="bbox 197 3190 274 3224" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ψΑ6ίr‘ἰ</ins>
+            <ins title="nlp 2.00">libri</ins>
           </span>
         </span>
         <span id="w_493" class="ocr_word" title="bbox 463 3192 679 3237" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">δυσμεταβλ.]</ins>
-            <del title="nlp 0.90">δυσμεταβλήτῳ.]</del>
-            <del title="nlp 0.89">δυσμεταβόλως.]</del>
-            <del title="nlp 0.88">δυσμεταβόλῳ.]</del>
+            <ins title="nlp 2.00">δυσμεταβλ.]</ins>
           </span>
         </span>
         <span id="w_494" class="ocr_word" title="bbox 707 3193 824 3235">
@@ -2622,10 +2573,7 @@
         </span>
         <span id="w_495" class="ocr_word" title="bbox 852 3193 1028 3239" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">εὐμεταβλ.</ins>
-            <del title="nlp 0.90">εὐμεταβόλῳ.</del>
-            <del title="nlp 0.89">εὐμεταβλήτῳ.</del>
-            <del title="nlp 0.88">εὐμεταβόλου.</del>
+            <ins title="nlp 2.00">εὐμεταβλ.</ins>
           </span>
         </span>
         <span id="w_496" class="ocr_word" title="bbox 1054 3194 1110 3236">
@@ -2648,14 +2596,14 @@
         </span>
         <span id="w_499" class="ocr_word" title="bbox 1323 3193 1436 3233">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">8^06)</ins>
+            <ins title="nlp 2.00">8b36)</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1554 3250 1635 3291">
         <span id="w_500" class="ocr_word" title="bbox 1554 3250 1635 3291">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">15*</ins>
+            <ins title="nlp 2.00">15*</ins>
           </span>
         </span>
       </span>
